# blueman

./: .gitignore
.github/workflows/: check.yml  potfile.yml
apps/: blueman-applet.in  blueman-manager.in  blueman-mechanism.in  blueman-tray.in
blueman/bluez/: Base.py  Manager.py
blueman/gui/: DeviceList.py  Makefile.am  MessageDialog.py  Notification.py  gui_config.py
blueman/gui/applet/: PluginDialog.py
blueman/gui/manager/: ManagerDeviceList.py  ManagerDeviceMenu.py  ManagerMenu.py  ManagerProgressbar.py  ManagerToolbar.py
blueman/main/: Applet.py  Manager.py  PluginManager.py  Tray.py
blueman/main/applet/: BluezAgent.py
blueman/plugins/applet/: ConnectionNotifier.py  DBusService.py  DeviceStateSaver.py  Makefile.am  PowerManager.py  PulseAudioProfile.py  RecentConns.py  RemoveBlockedDevice.py  SavePairedStates.py  StandardItems.py  StatusIcon.py  SystrayDeviceMenu.py
blueman/plugins/manager/: Makefile.am  PulseAudioProfile.py
blueman/plugins/mechanism/: RfKill.py
data/: org.blueman.gschema.xml
data/icons/hicolor/scalable/emblems/: Makefile.am
data/ui/: manager-main.ui
debian/: blueman.lintian-overrides  changelog  control  rules
po/: ja.po
